--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 # Byte-compiled / optimized / DLL files
-__pycache__/
+i__pycache__/
 *.py[cod]
 *$py.class
 
 # C extensions
 *.so
+*.csv
 
 # Distribution / packaging
 .Python
@@ -119,6 +120,8 @@ venv.bak/
 
 # mkdocs documentation
 /site
+/rossmann-telegram-api
+/api
 
 # mypy
 .mypy_cache/
